[gd_scene load_steps=16 format=3 uid="uid://cmrn4qaw8kove"]

[ext_resource type="Script" path="res://go-up/level.gd" id="1_663ct"]
[ext_resource type="Texture2D" uid="uid://bh2vv8ox8aj4n" path="res://go-up/Sprite-0004.png" id="2_3omkf"]
[ext_resource type="PackedScene" uid="uid://f52lphnh8i4f" path="res://go-up/player.tscn" id="3_50pu0"]
[ext_resource type="Script" path="res://state_machine.gd" id="4_elmsp"]
[ext_resource type="Script" path="res://go-up/PlayerFreeState.gd" id="5_2jedb"]
[ext_resource type="Script" path="res://go-up/PlayerJumpState.gd" id="6_n1cdp"]
[ext_resource type="Script" path="res://go-up/PlayerFallState.gd" id="7_nvlmd"]
[ext_resource type="Texture2D" uid="uid://dn07am33l5dyb" path="res://go-up/tiles.png" id="8_yugsh"]
[ext_resource type="PackedScene" uid="uid://dukvgwciua1dl" path="res://go-up/snowball.tscn" id="9_ikj4u"]
[ext_resource type="PackedScene" uid="uid://pbs53lnp4bln" path="res://go-up/button.tscn" id="10_jwask"]
[ext_resource type="Script" path="res://go-up/button.gd" id="11_injgn"]
[ext_resource type="PackedScene" uid="uid://bky7xs5407x6n" path="res://go-up/platform.tscn" id="12_moic8"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_3wpo8"]
texture = ExtResource("8_yugsh")
texture_region_size = Vector2i(6, 6)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-3, -3, -3, 3, 3, 3, 3, -3)
0:0/0/physics_layer_1/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_1/angular_velocity = 0.0
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-3, -3, -3, 3, 3, 3, 3, -3)
1:0/0/physics_layer_1/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_1/angular_velocity = 0.0
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-3, -3, -3, 3, 3, 3, 3, -3)
2:0/0/physics_layer_1/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_1/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-2.07713, -3, -3, -3, -3, 0.795495, -0.751301, 3, 3, 3, 3, 2.16551)
0:1/0/physics_layer_1/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_1/angular_velocity = 0.0
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0/physics_layer_1/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_1/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-3, -3, -3, 3, 3, 3, 3, -3)
2:1/0/physics_layer_1/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_1/angular_velocity = 0.0
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
0:2/0/physics_layer_1/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_1/angular_velocity = 0.0
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-3, -3, -3, 3, 3, 3, 3, 2.16551, -2.12132, -3)
1:2/0/physics_layer_1/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_1/angular_velocity = 0.0
0:3/0 = 0
0:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_0/angular_velocity = 0.0
0:3/0/physics_layer_1/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_1/angular_velocity = 0.0
1:3/0 = 0
1:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_0/angular_velocity = 0.0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-3, 1.98874, -3, 3, 0.839689, 3, 3, 0.839689, 3, -3, 2.03293, -3)
1:3/0/physics_layer_1/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_1/angular_velocity = 0.0
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-3, -3, -3, 3, 3, 3, 3, -3)
3:0/0/physics_layer_1/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_1/angular_velocity = 0.0
5:0/0 = 0
5:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:0/0/physics_layer_0/angular_velocity = 0.0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-3, -3, -3, 3, 3, 3, 3, -3)
5:0/0/physics_layer_1/linear_velocity = Vector2(0, 0)
5:0/0/physics_layer_1/angular_velocity = 0.0
6:0/0 = 0
6:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:0/0/physics_layer_0/angular_velocity = 0.0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-3, -3, -3, 3, 3, 3, 3, -3)
6:0/0/physics_layer_1/linear_velocity = Vector2(0, 0)
6:0/0/physics_layer_1/angular_velocity = 0.0
7:0/0 = 0
7:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:0/0/physics_layer_0/angular_velocity = 0.0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-3, -3, -3, 3, 3, 3, 3, -3)
7:0/0/physics_layer_1/linear_velocity = Vector2(0, 0)
7:0/0/physics_layer_1/angular_velocity = 0.0
5:2/0 = 0
5:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:2/0/physics_layer_0/angular_velocity = 0.0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-3, -3, -3, 3, 3, 3, 3, -3)
5:2/0/physics_layer_1/linear_velocity = Vector2(0, 0)
5:2/0/physics_layer_1/angular_velocity = 0.0
3:4/0 = 0
3:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:4/0/physics_layer_0/angular_velocity = 0.0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-3, -3, -3, 3, 3, 3, 3, -3)
3:4/0/physics_layer_1/linear_velocity = Vector2(0, 0)
3:4/0/physics_layer_1/angular_velocity = 0.0
4:4/0 = 0
4:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:4/0/physics_layer_0/angular_velocity = 0.0
4:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-3, -3, -3, 3, 3, 3, 3, -3)
4:4/0/physics_layer_1/linear_velocity = Vector2(0, 0)
4:4/0/physics_layer_1/angular_velocity = 0.0
5:4/0 = 0
5:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:4/0/physics_layer_0/angular_velocity = 0.0
5:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-3, -3, -3, 3, 3, 3, 3, -3)
5:4/0/physics_layer_1/linear_velocity = Vector2(0, 0)
5:4/0/physics_layer_1/angular_velocity = 0.0
6:4/0 = 0
6:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:4/0/physics_layer_0/angular_velocity = 0.0
6:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-3, -3, -3, 3, 3, 3, 3, -3)
6:4/0/physics_layer_1/linear_velocity = Vector2(0, 0)
6:4/0/physics_layer_1/angular_velocity = 0.0
0:4/0 = 0
0:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:4/0/physics_layer_0/angular_velocity = 0.0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-3, 2.07713, -3, 3, 3, 3, 3, -3, 2.2539, -3)
0:4/0/physics_layer_1/linear_velocity = Vector2(0, 0)
0:4/0/physics_layer_1/angular_velocity = 0.0
0:5/0 = 0
0:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:5/0/physics_layer_0/angular_velocity = 0.0
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-3, -3, -3, 3, -0.972272, 3, 3, 0, 3, -3)
0:5/0/physics_layer_1/linear_velocity = Vector2(0, 0)
0:5/0/physics_layer_1/angular_velocity = 0.0
0:6/0 = 0
0:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:6/0/physics_layer_0/angular_velocity = 0.0
0:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-3, -3, -3, 3, -1.01647, 3, -1.01647, -3)
0:6/0/physics_layer_1/linear_velocity = Vector2(0, 0)
0:6/0/physics_layer_1/angular_velocity = 0.0
0:7/0 = 0
0:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:7/0/physics_layer_0/angular_velocity = 0.0
0:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-3, -3, -3, 0, -0.0883884, 3, 3, 3, 3, 1.14905, 0.928077, -3)
0:7/0/physics_layer_1/linear_velocity = Vector2(0, 0)
0:7/0/physics_layer_1/angular_velocity = 0.0
1:7/0 = 0
1:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:7/0/physics_layer_0/angular_velocity = 0.0
1:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-1.01647, -3, -3, 1.06066, -3, 3, 0.0441937, 3, 3, -0.176777, 3, -3)
1:7/0/physics_layer_1/linear_velocity = Vector2(0, 0)
1:7/0/physics_layer_1/angular_velocity = 0.0
1:6/0 = 0
1:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:6/0/physics_layer_0/angular_velocity = 0.0
1:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(1.01647, -3, 0.972272, 3, 3, 3, 3, -3)
1:6/0/physics_layer_1/linear_velocity = Vector2(0, 0)
1:6/0/physics_layer_1/angular_velocity = 0.0
1:5/0 = 0
1:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:5/0/physics_layer_0/angular_velocity = 0.0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-3, -3, -3, 0, 0.618718, 3, 3, 3, 3, -3)
1:5/0/physics_layer_1/linear_velocity = Vector2(0, 0)
1:5/0/physics_layer_1/angular_velocity = 0.0
2:7/0 = 0
2:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:7/0/physics_layer_0/angular_velocity = 0.0
2:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-3, 1.06066, -3, 3, 3, 3, 3, -3, 0.883883, -3)
2:7/0/physics_layer_1/linear_velocity = Vector2(0, 0)
2:7/0/physics_layer_1/angular_velocity = 0.0
2:8/0 = 0
2:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:8/0/physics_layer_0/angular_velocity = 0.0
2:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-3, -3, -3, -0.928078, 1.06066, 3, 3, 3, 3, -3)
2:8/0/physics_layer_1/linear_velocity = Vector2(0, 0)
2:8/0/physics_layer_1/angular_velocity = 0.0
3:8/0 = 0
3:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:8/0/physics_layer_0/angular_velocity = 0.0
3:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-3, -3, -3, 3, -1.10485, 3, 3, -1.06066, 3, -3)
3:8/0/physics_layer_1/linear_velocity = Vector2(0, 0)
3:8/0/physics_layer_1/angular_velocity = 0.0
3:7/0 = 0
3:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:7/0/physics_layer_0/angular_velocity = 0.0
3:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-3, -3, -3, 3, 3, 3, 3, 0.972272, -1.23744, -3)
3:7/0/physics_layer_1/linear_velocity = Vector2(0, 0)
3:7/0/physics_layer_1/angular_velocity = 0.0
3:2/0 = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0/physics_layer_1/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_1/angular_velocity = 0.0
3:2/0/physics_layer_1/polygon_0/points = PackedVector2Array(-3, -3, -3, 3, 3, 3, 3, -3)
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0/physics_layer_1/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_1/angular_velocity = 0.0
4:1/0 = 0
4:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:1/0/physics_layer_0/angular_velocity = 0.0
4:1/0/physics_layer_1/linear_velocity = Vector2(0, 0)
4:1/0/physics_layer_1/angular_velocity = 0.0
5:1/0 = 0
5:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:1/0/physics_layer_0/angular_velocity = 0.0
5:1/0/physics_layer_1/linear_velocity = Vector2(0, 0)
5:1/0/physics_layer_1/angular_velocity = 0.0
7:2/0 = 0
7:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:2/0/physics_layer_0/angular_velocity = 0.0
7:2/0/physics_layer_1/linear_velocity = Vector2(0, 0)
7:2/0/physics_layer_1/angular_velocity = 0.0
7:3/0 = 0
7:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:3/0/physics_layer_0/angular_velocity = 0.0
7:3/0/physics_layer_1/linear_velocity = Vector2(0, 0)
7:3/0/physics_layer_1/angular_velocity = 0.0
7:4/0 = 0
7:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:4/0/physics_layer_0/angular_velocity = 0.0
7:4/0/physics_layer_1/linear_velocity = Vector2(0, 0)
7:4/0/physics_layer_1/angular_velocity = 0.0
6:6/0 = 0
6:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:6/0/physics_layer_0/angular_velocity = 0.0
6:6/0/physics_layer_1/linear_velocity = Vector2(0, 0)
6:6/0/physics_layer_1/angular_velocity = 0.0
6:7/0 = 0
6:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:7/0/physics_layer_0/angular_velocity = 0.0
6:7/0/physics_layer_1/linear_velocity = Vector2(0, 0)
6:7/0/physics_layer_1/angular_velocity = 0.0
3:3/0 = 0
3:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:3/0/physics_layer_0/angular_velocity = 0.0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-3, -3, -3, 3, 3, 3, 3, -3)
3:3/0/physics_layer_1/linear_velocity = Vector2(0, 0)
3:3/0/physics_layer_1/angular_velocity = 0.0
4:3/0 = 0
4:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:3/0/physics_layer_0/angular_velocity = 0.0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-3, -3, -3, 3, 3, 3, 3, -3)
4:3/0/physics_layer_1/linear_velocity = Vector2(0, 0)
4:3/0/physics_layer_1/angular_velocity = 0.0
5:3/0 = 0
5:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:3/0/physics_layer_0/angular_velocity = 0.0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-3, -3, -3, 3, 3, 3, 3, -3)
5:3/0/physics_layer_1/linear_velocity = Vector2(0, 0)
5:3/0/physics_layer_1/angular_velocity = 0.0
6:3/0 = 0
6:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:3/0/physics_layer_0/angular_velocity = 0.0
6:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-3, -3, -3, 3, 3, 3, 3, -3)
6:3/0/physics_layer_1/linear_velocity = Vector2(0, 0)
6:3/0/physics_layer_1/angular_velocity = 0.0
7:5/0 = 0
7:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:5/0/physics_layer_0/angular_velocity = 0.0
7:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-3, -3, -3, 3, 3, 3, 3, -3)
7:5/0/physics_layer_1/linear_velocity = Vector2(0, 0)
7:5/0/physics_layer_1/angular_velocity = 0.0
7:6/0 = 0
7:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:6/0/physics_layer_0/angular_velocity = 0.0
7:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-3, -3, -3, 3, 3, 3, 3, -3)
7:6/0/physics_layer_1/linear_velocity = Vector2(0, 0)
7:6/0/physics_layer_1/angular_velocity = 0.0
7:7/0 = 0
7:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:7/0/physics_layer_0/angular_velocity = 0.0
7:7/0/physics_layer_1/linear_velocity = Vector2(0, 0)
7:7/0/physics_layer_1/angular_velocity = 0.0
4:2/0 = 0
4:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:2/0/physics_layer_0/angular_velocity = 0.0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-3, -3, 3, -3, 3, 3, -3, 3)
4:2/0/physics_layer_1/linear_velocity = Vector2(0, 0)
4:2/0/physics_layer_1/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_hjqfp"]
tile_size = Vector2i(6, 6)
physics_layer_0/collision_layer = 1
physics_layer_1/collision_layer = 2
sources/0 = SubResource("TileSetAtlasSource_3wpo8")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dy4ah"]
size = Vector2(48, 0.4375)

[node name="Level" type="Node2D"]
script = ExtResource("1_663ct")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -190)
scale = Vector2(1, 3.26191)
texture = ExtResource("2_3omkf")
centered = false

[node name="CharacterBody2D" parent="." instance=ExtResource("3_50pu0")]
position = Vector2(24, 70)
slide_on_ceiling = false
floor_stop_on_slope = false
floor_max_angle = 0.523599
metadata/_edit_group_ = true

[node name="PlayerStateMachine" type="Node" parent="CharacterBody2D" node_paths=PackedStringArray("state")]
script = ExtResource("4_elmsp")
state = NodePath("PlayerFreeState")

[node name="PlayerFreeState" type="Node" parent="CharacterBody2D/PlayerStateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("5_2jedb")
player = NodePath("../..")

[node name="PlayerJumpState" type="Node" parent="CharacterBody2D/PlayerStateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("6_n1cdp")
player = NodePath("../..")

[node name="Timer" type="Timer" parent="CharacterBody2D/PlayerStateMachine/PlayerJumpState"]
wait_time = 0.6
one_shot = true

[node name="PlayerFallState" type="Node" parent="CharacterBody2D/PlayerStateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("7_nvlmd")
player = NodePath("../..")

[node name="RayCastTimer" type="Timer" parent="CharacterBody2D/PlayerStateMachine/PlayerFallState"]
wait_time = 0.1
one_shot = true

[node name="TileMap" type="TileMap" parent="."]
texture_filter = 3
tile_set = SubResource("TileSet_hjqfp")
format = 2
layer_0/tile_data = PackedInt32Array(851968, 0, 0, 851969, 65536, 0, 851970, 131072, 0, 851971, 65536, 0, 851972, 65536, 0, 851973, 131072, 0, 851974, 131072, 0, 851975, 0, 0, 131072, 131072, 1, 196608, 131072, 1, 65536, 131072, 1, 1, 0, 5, 0, 131072, 1, 393219, 196608, 8, 131077, 393216, 4, 262144, 131072, 1, 327681, 131072, 1, 393218, 65536, 5, 327683, 196608, 7, 327682, 131072, 1, 851967, 131072, 1, 786431, 131072, 1, 720895, 131072, 1, 655359, 131072, 1, 589823, 131072, 1, 524287, 131072, 1, 458751, 131072, 1, 393215, 131072, 1, 327679, 131072, 1, 786440, 131072, 1, 720904, 131072, 1, 655368, 131072, 1, 589832, 131072, 1, 524296, 131072, 1, 458760, 131072, 1, 393224, 131072, 1, 327688, 131072, 1, 262152, 131072, 1, 196616, 131072, 1, 131080, 131072, 1, 65544, 131072, 1, 8, 131072, 1, 589829, 327680, 0, 589830, 458752, 0, 262143, 131072, 1, 196607, 131072, 1, 131071, 131072, 1, 65535, 131072, 1, -1, 131072, 1, -65537, 131072, 1, -131073, 131072, 1, -196609, 131072, 1, -262145, 131072, 1, -327681, 131072, 1, -393217, 131072, 1, -458753, 131072, 1, -524289, 131072, 1, -589825, 131072, 1, -65528, 131072, 1, -131064, 131072, 1, -196600, 131072, 1, -262136, 131072, 1, -327672, 131072, 1, -393208, 131072, 1, -458744, 131072, 1, -524280, 131072, 1, -589816, 131072, 1, -655352, 131072, 1, -655361, 131072, 1, -720897, 131072, 1, -786433, 131072, 1, -851969, 131072, 1, -917505, 131072, 1, -983041, 131072, 1, -1048577, 131072, 1, -720888, 131072, 1, -786424, 131072, 1, -851960, 131072, 1, -917496, 131072, 1, -983032, 131072, 1, -1048568, 131072, 1, -1114104, 131072, 1, -393216, 131072, 1, -393215, 393216, 4, -393214, 196608, 8, -458752, 65536, 2, -65535, 65536, 2, -65536, 131072, 1, -851968, 262144, 4, -851967, 327680, 4, -851966, 131072, 1, -327680, 0, 5, -1114113, 131072, 1, -1179649, 131072, 1, -1245185, 131072, 1, -1310721, 131072, 1, -1376257, 131072, 1, -1441793, 131072, 1, -2031617, 131072, 1, -1507329, 131072, 1, -1572865, 131072, 1, -1638401, 131072, 1, -1703937, 131072, 1, -1769473, 131072, 1, -1835009, 131072, 1, -1900545, 131072, 1, -1966081, 131072, 1, -1179640, 131072, 1, -1310712, 131072, 1, -1245176, 131072, 1, -1376248, 131072, 1, -1507320, 131072, 1, -1441784, 131072, 1, -1572856, 131072, 1, -1638392, 131072, 1, -1703928, 131072, 1, -1769464, 131072, 1, -1835000, 131072, 1, -1900536, 131072, 1, -1966072, 131072, 1, -2031608, 131072, 1, -2097144, 131072, 1, -1179643, 65536, 3, -1114106, 327680, 2, -1245178, 0, 4, -1179642, 131072, 1, -1179641, 262144, 4, -1245177, 131072, 1, -1310713, 65536, 3, -1114108, 65536, 3, -1114107, 262144, 4, -1114112, 393216, 4, -1310716, 327680, 2, -1572857, 327680, 2, -1769470, 131072, 1, -1703933, 65536, 2, -1703934, 131072, 1, -1638396, 0, 1, -1638397, 262144, 4, -1638398, 327680, 0, -1703935, 131072, 1, -1769471, 131072, 1, -1769472, 458752, 0, -1638399, 65536, 5, -1703936, 65536, 6, 131076, 65536, 5, 327686, 0, 1, 262149, 65536, 6, 196613, 65536, 6, -262137, 196608, 4, -196606, 196608, 8, -262143, 65536, 6, -327679, 65536, 6, -131072, 65536, 2, 327680, 196608, 4)

[node name="RigidBody2D" parent="." node_paths=PackedStringArray("direction_ray") instance=ExtResource("9_ikj4u")]
position = Vector2(39, -84)
mass = 0.5
gravity_scale = 0.6
direction_ray = NodePath("RayCast2D2")
metadata/_edit_group_ = true

[node name="RayCast2D2" type="RayCast2D" parent="RigidBody2D"]
rotation = 2.39285
target_position = Vector2(16, 0)

[node name="CheckPoint_1" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CheckPoint_1"]
position = Vector2(24, -0.465)
scale = Vector2(1, 0.5)
shape = SubResource("RectangleShape2D_dy4ah")

[node name="CheckPoint_2" type="Area2D" parent="."]
position = Vector2(0, -96)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CheckPoint_2"]
position = Vector2(24, -0.52)
scale = Vector2(1, 0.5)
shape = SubResource("RectangleShape2D_dy4ah")

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="Button" parent="." instance=ExtResource("10_jwask")]
position = Vector2(30, 6)
script = ExtResource("11_injgn")

[node name="Platform" parent="Button" instance=ExtResource("12_moic8")]
position = Vector2(-2, -59)
script = null

[node name="Timer" type="Timer" parent="Button"]
wait_time = 9.0
one_shot = true

[node name="Button2" parent="." instance=ExtResource("10_jwask")]
position = Vector2(8, -84)
script = ExtResource("11_injgn")

[node name="Platform" parent="Button2" instance=ExtResource("12_moic8")]
position = Vector2(10, 6)
script = null

[node name="Timer" type="Timer" parent="Button2"]
wait_time = 8.0
one_shot = true

[connection signal="charge_jump" from="CharacterBody2D/PlayerStateMachine/PlayerFreeState" to="CharacterBody2D" method="_on_player_free_state_charge_jump"]
[connection signal="state_finished" from="CharacterBody2D/PlayerStateMachine/PlayerFreeState" to="CharacterBody2D" method="_on_player_free_state_state_finished"]
[connection signal="player_jump" from="CharacterBody2D/PlayerStateMachine/PlayerJumpState" to="CharacterBody2D" method="_on_player_jump_state_player_jump"]
[connection signal="timeout" from="CharacterBody2D/PlayerStateMachine/PlayerJumpState/Timer" to="CharacterBody2D/PlayerStateMachine/PlayerJumpState" method="_on_timer_timeout"]
[connection signal="player_recover" from="CharacterBody2D/PlayerStateMachine/PlayerFallState" to="CharacterBody2D" method="_on_player_fall_state_player_recover"]
[connection signal="timeout" from="CharacterBody2D/PlayerStateMachine/PlayerFallState/RayCastTimer" to="CharacterBody2D/PlayerStateMachine/PlayerFallState" method="_on_ray_cast_timer_timeout"]
[connection signal="body_entered" from="CheckPoint_1" to="." method="_on_check_point_1_body_entered"]
[connection signal="body_entered" from="CheckPoint_2" to="." method="_on_check_point_2_body_entered"]
[connection signal="body_entered" from="Button" to="Button" method="_on_body_entered"]
[connection signal="body_exited" from="Button" to="Button" method="_on_body_exited"]
[connection signal="timeout" from="Button/Timer" to="Button" method="_on_timer_timeout"]
[connection signal="body_entered" from="Button2" to="Button2" method="_on_body_entered"]
[connection signal="body_exited" from="Button2" to="Button2" method="_on_body_exited"]
[connection signal="timeout" from="Button2/Timer" to="Button2" method="_on_timer_timeout"]
